added omlet recipie

--- a/recipes/omlet.html
+++ b/recipes/omlet.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrambled Eggs Recicpe</title>
+    <title>Omelet Recipie</title>
 </head>
 <body>
-    <h1>Scrambled Eggs</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8703975.jpg&q=85" alt="Eggs">
-    <h6>A scrambled egg</h6>
-    <p>This is an egg that was stirred in a pot until it was scrambled</p>
+    <h1>Omelet</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5253175.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="Eggs">
+    <h6>An Omelet</h6>
+    <p>This is an egg that was stirred in a pot until it was flat enough to be flipped over something</p>
     <h6>Ingredients</h6>
     <ul>
         <li>An egg</li>
@@ -19,6 +19,7 @@
         <li>A fork</li>
         <li>A bowl</li>
         <li>Salt and Pepper</li>
+        <li>Something to flip egg over</li>
     </ul>
     <h6>Steps</h6>
     <ol>
@@ -27,7 +28,9 @@
         <li>Stirr bowl until egg is all yellow</li>
         <li>pour cooking spray into frying pan</li>
         <li>heat up frying pan</li>
-        <li>stir the egg yolk in frying pan until scrabmled</li>
+        <li>wait for egg to harden enough to be flippable</li>
+        <li>put stuff inside egg</li>
+        <li>flip egg over stuff</li>
     </ol>
 </body>
 </html>
