--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>Odin Recipes</h1>
     <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
+    <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
+    <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
+
 </body>
 </html>
