added boiled eggs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <h1>Odin Recipes</h1>
     <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
-    <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
-    <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a>
+    <a href="recipes/omlet.html">Omelet</a>
+    <a href="recipes/boiledeggs.html">Boiled Eggs</a>
 
 </body>
 </html>
